--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html lang="fa">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta name="keyword" content="amrezalou, w0r1d, امیرمحمد رضالو">
-  <title>amrezalou</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="keyword" content="amrezalou, w0r1d, امیرمحمد رضالو">
+    <title>amrezalou</title>
+  </head>
+
+  <body>
+    <div>
+      <img id="pepe" src="/home/bc/amrezalou.github.io/pepe.png" alt="me :)">
+      <div>
+        <h1> >>amrezalou </h1>
+      </div>
+      <div>
+        <h2> $ whoami <br> > Amirmohammad Rezalou 15 years old newbie commander.  </h3>
+      </div>
+    </div>
+    <br>
+    <div>
+      <div>
+        <h2> > contact holes </h2>
+      </div>
+      <div>
+        <a href="https://t.me/amrezalu"><i class="fa fa-telegram"></i> >Telegram (t.me/amrezalou) </a>
+        <a href="https://github.com/amrezalou"><i class="fa fa-github"></i> >Github (github.com/amrezalou) </a>
+        <a href="mailto:amrezalou@gmail.com"><i class="fa fa-envelope"></i>  >Email (amrezalou@gmail.com) </a>
+      </div>
+    </div>
+    <br>
+    <div>
+      <h2> > projects (soon) </h2>
+      <img src="/home/bc/amrezalou.github.io/git.jpg" alt="projects">
+    </div>
+    <br>
+    <br>
+  </body>
