--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div>
-      <img id="pepe" src="/home/bc/amrezalou.github.io/pepe.png" alt="me :)">
+      <img id="pepe" src="pepe.png" alt="me">
       <div>
         <h1> >>amrezalou </h1>
       </div>
@@ -33,7 +33,7 @@
     <br>
     <div>
       <h2> > projects (soon) </h2>
-      <img src="/home/bc/amrezalou.github.io/git.jpg" alt="projects">
+      <img src="git.jpg" alt="projects">
     </div>
     <br>
     <br>
